--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ a {
                 function showInfo(data) {
                     gData = data
                     var optionsJSON = ["date", "party1", "party2", "party3", "accesscategory"]
-                    var template = "<ul><li><b>Date: </b>{{date}}</li>" + "<li><b>Party#1: </b>{{party1}}</li>" + "<li><b>Party#2: </b>{{party2}}</li>" + "<li><b>Party#3: </b>{{party3}}</li>" + "<li><b>Category:</b> {{accesscategory}}" + "<li><br>For further details contact:<br>sec-analyst@southsudanngoforum.org</li></ul>"
+                    var template = "<ul><li><b>Date: </b>{{date}}</li>" + "<li><b>Party#1: </b>{{party1}}</li>" + "<li><b>Party#2: </b>{{party2}}</li>" + "<li><b>Party#3: </b>{{party3}}</li>" + "<li><b>Category:</b> {{accesscategory}}</ul>"
                     var geoJSON = Sheetsee.createGeoJSON(gData, optionsJSON)
                     var map = Sheetsee.loadMap("map")
 
@@ -118,62 +118,13 @@ a {
             <div class="col-sm-3">
                 <img src="logo.png" class="img-responsive" alt="South Sudan NGO Forum">
                 <div>
-                    <p>This map shows Security Incidents collected by the Secretariat. Click individidual marker for incident details.</p>
+                    <p>This map shows Access Incidents collected by the Secretariat. Click individidual marker for incident details.</p>
                 </div>
 
-                <button class="btn btn-primary btn-block" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Show/Hide Incident Categories
-                </button>
-                <div class="collapse" id="collapseExample" style="margin-top: 10px; margin-bottom: 10px;">
-                    <div>
-                        <img src="Inter-communal Violence.png" class="img" alt="South Sudan NGO Forum"> <small>Inter-Communal Violence</small>
-                        <br>
-                        <img src="Intra-communal Violence.png" class="img" alt="South Sudan NGO Forum"> <small>Intra-Communal Violence</small>
-                        <br>
-                        <img src="Armed Conflict.png" class="img" alt="South Sudan NGO Forum"> <small>Armed Conflict</small>
-                        <br>
-                        <img src="Vehicle Theft.png" class="img" alt="South Sudan NGO Forum"> <small>Vehicle Theft</small>
-                        <br>
-                        <img src="Carjackings.png" class="img" alt="South Sudan NGO Forum"> <small>Carjacking</small>
-                        <br>
-                        <img src="Cattle Raiding.png" class="img" alt="South Sudan NGO Forum"> <small>Cattle Raiding</small>
-                        <br>
-                        <img src="Harrassment.png" class="img" alt="South Sudan NGO Forum"> <small>Harrassment</small>
-                        <br>
-                        <img src="Human Rights Abuse.png" class="img" alt="South Sudan NGO Forum"> <small>Human Rights Abuse</small>
-                        <br>
-                        <img src="Civil Disturbance.png" class="img" alt="South Sudan NGO Forum"> <small>Civil Disturbance</small>
-                        <br>
-                        <img src="Natural Disaster.png" class="img" alt="South Sudan NGO Forum"> <small>Natural Disaster</small>
-                        <br>
-                        <img src="Accident.png" class="img" alt="South Sudan NGO Forum"> <small>Accident</small>
-                        <br>
-                        <img src="UXOlandmine.png" class="img" alt="South Sudan NGO Forum"> <small>UXO/Landmine</small>
-                        <br>
-                        <img src="Gender-based Violence.png" class="img" alt="South Sudan NGO Forum"> <small>Gender-based Violence</small>
-                        <br>
-                        <img src="KidnappingAbduction.png" class="img" alt="South Sudan NGO Forum"> <small>Kidnapping/Abduction</small>
-                        <br>
-                        <img src="Detention.png" class="img" alt="South Sudan NGO Forum"> <small>Detention</small>
-                        <br>
-                        <img src="Convoy Robbery.png" class="img" alt="South Sudan NGO Forum"> <small>Convoy Robbery</small>
-                        <br>
-                        <img src="Compound Robbery.png" class="img" alt="South Sudan NGO Forum"> <small>Compound Robbery</small>
-                        <br>
-                        <img src="Armed Attack.png" class="img" alt="South Sudan NGO Forum"> <small>Armed Attack</small>
-                        <br>
-                        <img src="Damage to FacilitiesPropertyAssets.png" class="img" alt="South Sudan NGO Forum"> <small>Damage to Facilities/Property/Assets</small>
-                        <br>
-                        <img src="Other Crime.png" class="img" alt="South Sudan NGO Forum"> <small>Other Crime</small>
-                        <br>
-                    </div>
-                </div>
                 <div style="margin-top: 10px; margin-bottom: 10px;">
                     <p>For feature requests or help improving this tool contact Brian <a href="mailto:infomgr@southsudanngoforum.org" target="_top">infomgr@southsudanngoforum.org</a>
                     </p>
                 </div>
-                <a target="_blank" href="http://southsudanngoforum.org/security-incident-reporting-form/">
-                    <button type="button" class="btn btn-primary btn-block">Report an Incident</button>
-                </a>
 
             </div>
         </div>
