minot text change

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ a {
                 </div>
 
                 <div style="margin-top: 10px; margin-bottom: 10px;">
-                    <p>For feature requests or help improving this tool contact Brian <a href="mailto:infomgr@southsudanngoforum.org" target="_top">infomgr@southsudanngoforum.org</a>
+                    <p>For feature requests or help improving this tool contact: <a href="mailto:infomgr@southsudanngoforum.org" target="_top">infomgr@southsudanngoforum.org</a>
                     </p>
                 </div>
 
